--- a/Lab1-git.ipynb
+++ b/Lab1-git.ipynb
@@ -8,6 +8,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   Lab1-pythonpandas.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\n",
+      "Your branch is up-to-date with 'origin/master'.\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
+      "\n",
+      "\tmodified:   Lab1-pythonpandas.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "git status"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
