finish revieiwng pythonpandas

--- a/Lab1-babypython.ipynb
+++ b/Lab1-babypython.ipynb
@@ -1558,6 +1558,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mmodified:   Lab1-babypython.ipynb\u001b[m\r\n",
+      "\t\u001b[31mmodified:   Lab1-pythonpandas.ipynb\u001b[m\r\n",
+      "\r\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git reset HEAD <file>...\" to unstage)\r\n",
+      "\r\n",
+      "\t\u001b[32mmodified:   Lab1-babypython.ipynb\u001b[m\r\n",
+      "\t\u001b[32mmodified:   Lab1-pythonpandas.ipynb\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 28d8689] finish reviewing babypython\r\n",
+      " 2 files changed, 413 insertions(+), 607 deletions(-)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m\"finish reviewing babypython\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch master\r\n",
+      "nothing to commit, working directory clean\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
